--- a/DefaultConfig.json
+++ b/DefaultConfig.json
@@ -6,8 +6,7 @@
         "tobe_row": {"key": "期待"},
         "result_row": {"key": "結果", "ignores": ["期待結果"]},
         "person_row": {"key": "担当者"},
-        "date_row": {"key":"日付"},
-        "filter": ["Pass", "Fixed", "Suspend", "N/A"]
+        "date_row": {"key":"日付"}
     },
     "write": {
         "filepath": "",
@@ -15,7 +14,7 @@
         "structures": {"total": "合計", "by_env": "環境別", "by_name": "担当者別"}
     },
     "common": {
-        "results": ["Pass", "Fixed", "Suspend", "N/A", "Completed"],
+        "results": ["Pass", "Fail", "Blocked", "Fixed", "Suspend", "N/A"],
         "completed_results": ["Pass", "Fixed", "Suspend", "N/A"]
     }
 }
