--- a/DefaultConfig.json
+++ b/DefaultConfig.json
@@ -9,11 +9,6 @@
         "date_row": {"key":"日付"},
         "excluded": ["対象外"]
     },
-    "write": {
-        "filepath": "",
-        "table_name": "DATA",
-        "structures": {"daily": "日付別", "by_env": "環境別", "by_name": "担当者別"}
-    },
     "common": {
         "results": ["Pass", "Fixed", "Fail", "Blocked", "Suspend", "N/A"],
         "completed": "Completed",
@@ -28,5 +23,11 @@
             "N/A": "gray",
             "Not Run": "silver"
         }
+    },
+    "app": {
+        "filepath": "",
+        "table_name": "DATA",
+        "structures": {"daily": "日付別", "by_env": "環境別", "by_name": "担当者別"},
+        "window_position": "780x590+200+200"
     }
 }
