列番号を複数指定で探せるように

--- a/DefaultConfig.json
+++ b/DefaultConfig.json
@@ -3,10 +3,10 @@
         "sheet_search_keys": ["テスト項目"],
         "sheet_search_ignores": [],
         "header": {"search_col": "A", "search_key": "#"},
-        "tobe_row": {"key": "期待"},
-        "result_row": {"key": "結果", "ignores": ["期待結果"]},
-        "person_row": {"key": "担当者"},
-        "date_row": {"key":"日付"},
+        "tobe_row": {"keys": ["期待"]},
+        "result_row": {"keys": ["結果"], "ignores": ["期待結果"]},
+        "person_row": {"keys": ["担当者"]},
+        "date_row": {"keys": ["日付", "実施日"]},
         "excluded": ["対象外"]
     },
     "common": {
