--- a/DefaultConfig.json
+++ b/DefaultConfig.json
@@ -22,8 +22,13 @@
         "filepath": "",
         "table_name": "DATA",
         "structures": {"daily": "日付別", "by_env": "環境別", "by_name": "担当者別"},
-        "colors": {
-            "bar": {
+        "state": {
+            "completed": {"name": "完了", "foreground": "darkgreen", "background": "darkseagreen1"},
+            "in_progress": {"name": "進行中", "foreground": "dodgerblue4", "background": "skyblue"},
+            "not_started": {"name": "未着手", "foreground": "dimgray", "background": "silver"}
+        },
+        "bar": {
+            "colors": {
                 "Pass": "forestgreen",
                 "Fail": "orangered",
                 "Blocked": "skyblue",
@@ -31,7 +36,7 @@
                 "Suspend": "gold",
                 "N/A": "gray"
             },
-            "label": {
+            "font_color_map": {
                 "black": ["skyblue", "gold"],
                 "gray": ["silver"]
             }
