--- a/DefaultConfig.json
+++ b/DefaultConfig.json
@@ -40,6 +40,14 @@
                 "black": ["skyblue", "gold"],
                 "gray": ["silver"]
             }
+        },
+        "sort": {
+            "map": {
+                "file_name": "ファイル名順",
+                "start_date": "開始日順",
+                "finish_date": "完了日順",
+                "completed_rate": "完了率順"
+            }
         }
     }
 }
