--- a/DefaultConfig.json
+++ b/DefaultConfig.json
@@ -43,10 +43,10 @@
         },
         "sort": {
             "orders": {
-                "file_name": {"label": "ファイル名順"},
-                "start_date": {"label": "開始日順"},
-                "finish_date": {"label": "完了日順"},
-                "completed_rate": {"label": "完了率順"}
+                "file_name": {"label": "ファイル名順", "type": "asc"},
+                "start_date": {"label": "最近開始した順", "type": "desc"},
+                "finish_date": {"label": "最近完了した順", "type": "desc"},
+                "completed_rate": {"label": "完了率高い順", "type": "desc"}
             },
             "default": "file_name"
         }
