--- a/requirements.txt
+++ b/requirements.txt
@@ -2,5 +2,7 @@ japanize_matplotlib==1.1.3
 matplotlib==3.10.1
 numpy==2.2.5
 openpyxl==3.1.5
+Requests==2.32.3
+requests_ntlm==1.3.0
 tkinter_tooltip==3.1.2
 tqdm==4.67.1
