--- a/DefaultConfig.json
+++ b/DefaultConfig.json
@@ -12,10 +12,10 @@
     "test_status": {
         "results": ["Pass", "Fixed", "Fail", "Blocked", "Suspend", "N/A"],
         "completed_results": ["Pass", "Fixed", "Suspend", "N/A"],
-        "filled_results": ["Pass", "Fixed", "Fail", "Blocked", "Suspend", "N/A"],
+        "executed_results": ["Pass", "Fixed", "Fail", "Blocked", "Suspend", "N/A"],
         "labels": {
             "completed": "完了数",
-            "filled": "消化数",
+            "executed": "消化数",
             "not_run": "未着手"
         }
     },
