--- a/DefaultConfig.json
+++ b/DefaultConfig.json
@@ -3,7 +3,7 @@
         "sheet_search_keys": ["テスト項目"],
         "sheet_search_ignores": [],
         "header": {"search_col": "A", "search_key": "#"},
-        "tobe_row": {"keys": ["期待"]},
+        "tobe_row": {"keys": ["期待", "実施対象"]},
         "result_row": {"keys": ["結果"], "ignores": ["期待結果"]},
         "person_row": {"keys": ["担当者"]},
         "date_row": {"keys": ["日付", "実施日"]},
