--- a/DefaultConfig.json
+++ b/DefaultConfig.json
@@ -20,7 +20,8 @@
         }
     },
     "app": {
-        "window_position": "800x580+200+200",
+        "window_size": "800x580",
+        "window_position": "+200+200",
         "structures": {"daily": "日付別", "by_env": "環境別", "by_name": "担当者別"},
         "state": {
             "completed": {"name": "完了", "foreground": "darkgreen", "background": "darkseagreen1"},
