--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,8 @@ japanize_matplotlib==1.1.3
 matplotlib==3.10.1
 numpy==2.2.5
 openpyxl==3.1.5
+pytest==8.3.5
+pywin32==308
 Requests==2.32.3
 requests_ntlm==1.3.0
 tkinter_tooltip==3.1.2
