--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,10 @@
-japanize_matplotlib==1.1.3
-matplotlib==3.10.1
-numpy==2.2.5
-openpyxl==3.1.5
+streamlit>=1.32.0
+pandas>=2.2.0
+matplotlib>=3.8.0
+numpy>=1.26.0
+openpyxl>=3.1.0
+japanize-matplotlib>=1.1.3
+plotly>=5.18.0
 pytest==8.3.5
 pywin32==308
 Requests==2.32.3
