--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,13 @@
-streamlit>=1.32.0
-pandas>=2.2.0
-matplotlib>=3.8.0
-numpy>=1.26.0
-openpyxl>=3.1.0
-japanize-matplotlib>=1.1.3
-plotly>=5.18.0
+matplotlib==3.10.3
+matplotlib_fontja==1.1.0
+numpy==2.2.6
+openpyxl==3.1.5
+pandas==2.2.3
+plotly==6.1.0
 pytest==8.3.5
 pywin32==308
 Requests==2.32.3
 requests_ntlm==1.3.0
+streamlit==1.45.1
 tkinter_tooltip==3.1.2
 tqdm==4.67.1
